fix: update task dependencies in turbo.json for improved build order

--- a/turbo.json
+++ b/turbo.json
@@ -36,7 +36,7 @@
       "cache": false
     },
     "test": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build","build"],
       "outputs": ["coverage/**"],
       "inputs": ["src/**/*.js", "test/**/*.js"]
     },
